--- a/index.html
+++ b/index.html
@@ -73,7 +73,34 @@
             </div>
         </div>
     </div>
-
+    <div class="column">
+        <h2>Тестируется</h2>
+        <div v-for="(task, index) in testingTasks" :key="index">
+            <div v-if="editedTaskIndex !== index || editedColumn !== 'testingTasks'">
+                <h3>{{ task.title }}</h3>
+                <p> {{ task.description }}</p>
+                <p>Дата создания {{ task.createdAt }}</p>
+                <p>Дэдлайн {{ task.deadline }}</p>
+                <p>Последние изменения {{ task.lastChange }}</p>
+                <button class="edit-button" @click="editTask(index, 'testingTasks')">Edit</button>
+                <button class="move-button" @click="moveToCompleted(index)">Move to Completed</button>
+                <button class="move-button" @click="returnToInProgress(index)">Return to In Progress</button>
+                <label for="returnReason"><br>Return Reason:</label>
+                <input class="return-reason-input" id="returnReason" type="text" v-model="task.returnReason">
+            </div>
+            <div v-else>
+                <form @submit.prevent="saveEditedTask(index, 'testingTasks')">
+                    <label for="editTitle">Заголовок</label>
+                    <input id="editTitle" type="text" v-model="editedTask.title">
+                    <label for="editDescription">Описание</label>
+                    <textarea id="editDescription" v-model="editedTask.description"></textarea>
+                    <label for="editDeadline">Дэдлайн</label>
+                    <input id="editDeadline" type="date" v-model="editedTask.deadline">
+                    <button type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
